--- a/documentation/pom.xml
+++ b/documentation/pom.xml
@@ -259,14 +259,29 @@
                                     </target>
                                 </configuration>
                             </execution>
+                            <execution>
+                                <id>upload</id>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <skip>${skipArtifactUpload}</skip>
+                                    <target>
+                                        <echo message="Uploading HTML docs to ${upload.docsDir}/apidocs" verbose="true" compressed="true"/>
+                                        <scp todir="${upload.docsDir}/apidocs" keyfile="${upload.keyFile}">
+                                            <fileset dir="${project.build.directory}/generated-html"/>
+                                        </scp>
+                                        <echo message="Uploading PDF docs to ${upload.docsDir}/pdf"/>
+                                        <scp todir="${upload.docsDir}/pdf" keyfile="${upload.keyFile}" verbose="true" compressed="true">
+                                            <fileset dir="${project.build.directory}/generated-pdf">
+                                                <include name="*.pdf"/>
+                                            </fileset>
+                                        </scp>
+                                    </target>
+                                </configuration>
+                            </execution>
                         </executions>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.codehaus.groovy</groupId>
-                                <artifactId>groovy-all</artifactId>
-                                <version>${version.groovy}</version>
-                            </dependency>
-                        </dependencies>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
