--- a/pom.xml
+++ b/pom.xml
@@ -1256,6 +1256,21 @@
                <version>2.8.1</version>
             </plugin>
             <plugin>
+               <artifactId>maven-scm-plugin</artifactId>
+               <version>1.9.5</version>
+               <configuration>
+                  <tag>${project.version}</tag>
+               </configuration>
+            </plugin>
+            <plugin>
+               <groupId>org.codehaus.mojo</groupId>
+               <artifactId>versions-maven-plugin</artifactId>
+               <version>2.5</version>
+               <configuration>
+                  <generateBackupPoms>false</generateBackupPoms>
+               </configuration>
+            </plugin>
+            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.8</version>
